# gRPC_Calculator

./: CMakeLists.txt  README.md
client/: ArithmeticalClient.cpp  ArithmeticalClient.h  ClientDeclare.h  ClientFunctions.cpp  ClientFunctions.h  main.cpp
resources/: arithmetic.grpc.pb.cc  arithmetic.grpc.pb.h  arithmetic.pb.cc  arithmetic.pb.h  arithmetic.proto
server/: ArithmeticalService.cpp  ArithmeticalService.h  ServerDeclare.h  ServerFunctions.cpp  ServerFunctions.h  main.cpp
